[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drawing"
version = "0.1.0"
description = "$"
authors = [{ name = "rodri$" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]